fix layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Empty. Add your own CSS if you like */
 body{
-	float: left;
+	/*float: left;*/
 	width: 100%;
 }
 .slider { 
@@ -8,7 +8,7 @@ body{
 	text-align: center 
 }
 .scroll { 
-	height: 100% 
+	/*height: 100% */
 }
 .loading{
 	text-align: center; 
